# mega-agentic-system

./: .env.example  .gitignore  BYOK_PLAN.md  CLAUDE.md  DEPLOY.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  RAG_system.py  README_API.md  agentic_orchestration_system.py  ai_research_platform.py  api_server.py  build_scout_plan.py  cli_tool.py  code_generation.py  comprehensive_showcase.py  csv_data_completion_tool.py  document_generation.py  image_generation.py  main.py  mega_agentic_system.py  music_realtime.py  pyproject.toml  quick_test.py  research_assistant.py  showcase2.py  speech_generation.py  test_csv.py
backend/agent_harness/: README.md  harness.py  orchestrator.py  run_example.py
backend/car_insurance_agent/: tools.py
backend/google_search_agent/: agent.py
backend/interations/: agent.ipynb
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/code/: page.tsx
frontend/app/csv/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/images/: page.tsx
frontend/app/music/: page.tsx
frontend/components/: ImageUploader.tsx  api-key-settings.tsx  gemini-live.tsx  markdown-renderer.tsx  metrics-dashboard.tsx  music-realtime-studio.tsx  task-detail.tsx  task-form.tsx  task-list.tsx  theme-toggle.tsx  workflow-card.tsx  workflow-visualizer.tsx
frontend/lib/: api-key.ts  api.ts  music-stream.ts  server-gemini.ts
frontend/public/: kinetic-card (17).html
(+20 files in other folders)
