[project]
name = "backend"
version = "0.1.0"
description = "Ultimate AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "bio>=1.8.0",
    "google-genai>=1.39.0",
    "markdown>=3.9",
    "pillow>=11.3.0",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "wikipedia>=1.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "rich>=14.2.0",
]
